--- a/Semana_6_e_7.ipynb
+++ b/Semana_6_e_7.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPyGhogkZCAVf3SrLMWM6RB",
+      "authorship_tag": "ABX9TyMqIn1o8jGqKyCyDd9m3G/u",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -722,57 +722,59 @@
       "source": [
         "#1 Crie um algoritmo que simule um sistema de reservas de um restaurante. O programa deve solicitar o número de pessoas para a reserva e verificar se há disponibilidade,\n",
         "#considerando que o restaurante possui apenas mesas de 4 lugares. Se o número de pessoas exceder a capacidade de uma mesa, o programa deve calcular quantas mesas serão necessárias e informar ao usuário.​\n",
+        "\n",
         "mesas = 5\n",
-        "lugares = mesas*4\n",
+        "lugares = mesas * 4\n",
         "\n",
         "while True:\n",
-        " reserva = int(input('Digite o número de pessoas: '))\n",
-        " if reserva <= lugares:\n",
-        "  if lugares%4 == 0:\n",
-        "    print(f'Foi reservado {reserva}')\n",
-        "    mesas = mesas - (reserva//4)\n",
-        "    lugares -= reserva\n",
-        "  else:\n",
-        "    reserva = reserva + (4 - (reserva%4))\n",
-        "    mesas = mesas - (reserva//4)\n",
-        "    lugares -= reserva\n",
-        "  print(f'Ainda restam {mesas} mesas, num total de {lugares} lugares!')\n",
+        "    reservas = int(input('Quantidade de pessoas: '))\n",
         "\n",
-        "  opc = input('Deseja continuar? (S/N): ')\n",
-        "  if opc.upper() == 'N':\n",
-        "    break\n",
-        ""
+        "    if reservas <= lugares:\n",
+        "        mesas_necessarias = reservas // 4\n",
+        "        if reservas % 4 != 0:\n",
+        "            mesas_necessarias += 1\n",
+        "            pessoas_ajustadas = mesas_necessarias * 4\n",
+        "        else:\n",
+        "            pessoas_ajustadas = reservas\n",
+        "\n",
+        "        if mesas_necessarias <= mesas:\n",
+        "            print(f'Foi reservado {mesas_necessarias} mesas para {reservas} pessoas')\n",
+        "            mesas -= mesas_necessarias\n",
+        "            lugares -= pessoas_ajustadas\n",
+        "            print(f'Ainda restam {mesas} mesas com {lugares} lugares.')\n",
+        "        else:\n",
+        "            print(f'Não há mesas suficientes para acomodar {reservas} pessoas.')\n",
+        "            print(f'Só restam {mesas} mesas com {lugares} lugares.')\n",
+        "    else:\n",
+        "        print(f'Não comporta, só restam {mesas} mesas com {lugares} lugares.')\n",
+        "\n",
+        "    opc = input('Deseja continuar? (S/N) ')\n",
+        "    if opc.upper() == 'N':\n",
+        "        print('Tchau!')\n",
+        "        break\n"
       ],
       "metadata": {
         "id": "TtwFbTxkrIXj",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 426
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9b548bc7-9532-4fd8-b0af-e1ff194291f2"
+        "outputId": "e8a6b19a-3176-40ea-dd52-0e9b29874a5a"
       },
-      "execution_count": 23,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Digite o número de pessoas: 15\n",
-            "15 lugares reservados!\n",
-            "Ainda restam 2 mesas, num total de 5 lugares!\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "Interrupted by user",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-23-f5864b24f60f>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     17\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'Ainda restam {mesas} mesas, num total de {lugares} lugares!'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m   \u001b[0mopc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Deseja continuar? (S/N): '\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0mopc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'N'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m   1175\u001b[0m                 \u001b[0;34m\"raw_input was called, but this frontend does not support input requests.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1176\u001b[0m             )\n\u001b[0;32m-> 1177\u001b[0;31m         return self._input_request(\n\u001b[0m\u001b[1;32m   1178\u001b[0m             \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprompt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1179\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"shell\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m   1217\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1218\u001b[0m                 \u001b[0;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1219\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Interrupted by user\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1220\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1221\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwarning\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Invalid Message:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexc_info\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
+            "Quantidade de pessoas: 15\n",
+            "Foi reservado 4 mesas para 15 pessoas\n",
+            "Ainda restam 1 mesas com 4 lugares.\n",
+            "Deseja continuar? (S/N) s\n",
+            "Quantidade de pessoas: 4\n",
+            "Foi reservado 1 mesas para 4 pessoas\n",
+            "Ainda restam 0 mesas com 0 lugares.\n",
+            "Deseja continuar? (S/N) n\n",
+            "Tchau!\n"
           ]
         }
       ]
@@ -780,14 +782,48 @@
     {
       "cell_type": "code",
       "source": [
-        "#2 Desenvolva um algoritmo que auxilie na gestão de estoque de uma loja. O programa deve permitir que o usuário insira o nome e a quantidade de diferentes produtos. Se a quantidade de um produto for inferior a 5 unidades, o sistema deve alertar que o estoque está baixo e sugerir a reposição. O processo deve continuar até que o usuário decida encerrar.​\n",
+        "#2 Desenvolva um algoritmo que auxilie na gestão de estoque de uma loja. O programa deve permitir que o usuário insira o nome e a quantidade de diferentes produtos.\n",
+        "# Se a quantidade de um produto for inferior a 5 unidades, o sistema deve alertar que o estoque está baixo e sugerir a reposição. O processo deve continuar até que o usuário decida encerrar.​\n",
+        "\n",
+        "estoque = {}\n",
+        "while True:\n",
+        "  produto = input('Digite o nome do produto: ')\n",
+        "  quantidade = int(input('Digite a quantidade: '))\n",
+        "  estoque[produto] = quantidade\n",
+        "  opc = input('Deseja continuar? (S/N) ')\n",
+        "  if quantidade >= 5:\n",
+        "     print(f'Estoque baixo de {produto}!')\n",
+        "  if opc.upper() == 'N':\n",
+        "    print(estoque)\n",
+        "    print('Tchau!')\n",
+        "    break\n",
         "\n"
       ],
       "metadata": {
-        "id": "XjALuK81rK87"
+        "id": "XjALuK81rK87",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ed0a0bb8-2fd6-4c5f-a2d2-60d53a7a554a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite o nome do produto: maça\n",
+            "Digite a quantidade: 5\n",
+            "Deseja continuar? (S/N) s\n",
+            "Estoque baixo de maça!\n",
+            "Digite o nome do produto: banana\n",
+            "Digite a quantidade: 4\n",
+            "Deseja continuar? (S/N) n\n",
+            "{'maça': 5, 'banana': 4}\n",
+            "Tchau!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
