--- a/Lista_2.ipynb
+++ b/Lista_2.ipynb
@@ -14,7 +14,7 @@
       "cell_type": "markdown",
       "source": [
         "Lista 02\n",
-        "Alunos: Jesse Jarvin Gruenewald Nucum - 20251beciv0040 e Márcio Alves Junior"
+        "Alunos: Jesse Jarvin Gruenewald Nucum - 20251beciv0040 e Márcio Alves Nascimento Júnior - 20251beciv0091"
       ],
       "metadata": {
         "id": "M-glNqA2nd_l"
@@ -1543,7 +1543,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOFEXTEIfGdm9RoI/sQgt4Q",
+      "authorship_tag": "ABX9TyMt2sGiaYCV1AYRgew0pIbQ",
       "include_colab_link": true
     },
     "kernelspec": {
